# skp-viewer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CameraOption.h  CameraState.h  Gui.cpp  Gui.h  InputState.h  README.md  RenderOption.h  Shader.cpp  Shader.h  TODO.md  binding_test_qt.py  binding_test_runner.py  main.cpp  requirements.txt  runner.py
bindings/: CMakeLists.txt  bindings.cpp
cmake/: ExternTargets.cmake
dev-shell/: CMakeLists.txt  Gui.cpp  Gui.h  GuiContext.h  InputContext.cpp  InputContext.h  InputController.h  KeyCommand.h  ObjectEditContext.cpp  ObjectEditContext.h  PlaybackState.h  Window.cpp  Window.h  guiCommon.h  main.cpp  util.cpp  util.h
dev-shell/gui/: Gui.cpp  Gui.h  GuiContext.h  guiCommon.cpp  guiCommon.h
dev-shell/input/: FlyCameraContext.cpp  FlyCameraContext.h  InputContext.h  InputController.cpp  InputController.h  KeyCommand.h  KeyCommandSet.h  ObjectEditContext.cpp
engine/: CMakeLists.txt  Engine.cpp  Engine.h  bindings.cpp  build.cpp  build.h  export.h  primitives.h
engine/model/: Mesh.cpp  Vertex.h
engine/reader/: AbstractReader.h  AssimpReader.cpp  AssimpReader.h  SketchupReader.cpp  SketchupReader.h  sketchup-specialization.h
engine/render/: AdditiveBlendPass.cpp  AdditiveBlendPass.h  BasePass.cpp  BasePass.h  BlendPass.cpp  BlendPass.h  BoundingBoxOverlayPass.cpp  BoundingBoxOverlayPass.h  BrightFilterPass.cpp  BrightFilterPass.h  ColorBalancePass.cpp  ColorBalancePass.h  ColorTexture.cpp  ColorTexture.h  DepthTexture.cpp  DepthTexture.h  GaussianBlurPass.cpp  GaussianBlurPass.h  GeometryBufferPass.cpp  GeometryBufferPass.h  MainPass.cpp  MainPass.h  OffscreenRenderTarget.cpp  OffscreenRenderTarget.h  OutlinePass.cpp  OutlinePass.h  RenderContext.h  RenderEdge.h  RenderMaterial.h  RenderMesh.cpp  RenderMesh.h  RenderModel.cpp  RenderModel.h  RenderTexture.cpp  RenderTexture.h  RenderUnit.cpp  RenderUnit.h  RenderVertex.h  Renderer.cpp  Renderer.h  (+13 more)
engine/render/model/: RenderMaterial.h  RenderMesh.cpp  RenderMesh.h  RenderModel.h  RenderTexture.h  RenderVertex.h
engine/runtime/: RuntimeModel.cpp  RuntimeModel.h
engine/scene/: CameraState.h  DirectionalLight.cpp  DirectionalLight.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
resources/: additiveBlend.frag  bloom.frag  brightFilter.frag  colorBalance.frag  colorBalance.vert  gaussianBlur.frag  main.frag  main.vert  monkey.frag  monkey.vert  monkey_disp.frag  monkey_disp.vert  monkey_sub.vert  multiplicativeBlend.frag  outline.frag  outline.vert  quad.frag  quad.glsl  render.glsl  simple.frag  simple.vert  sub.frag  test.skp  toneMap.frag
resources/model/: monkey.blend
scripts/: find_python.py
src/: BaseRenderer.h  CameraManager.cpp  CameraManager.h  CameraState.h  ColorTexture.cpp  ColorTexture.h  ContinuousRenderSession.h  DepthTexture.cpp  Engine.cpp  Engine.h  FlyCameraContext.cpp  FlyCameraContext.h  Gui.cpp  Gui.h  GuiContext.h  InputContext.cpp  InputContext.h  InputController.cpp  InputController.h  InputState.h  KeyCommandSet.cpp  OffscreenRenderTarget.cpp  OffscreenRenderTarget.h  PlaybackState.h  Program.h  ProgramSelector.cpp  ProgramSelector.h  RenderContext.h  RenderOnlyProgram.cpp  RenderOnlyProgram.h  RenderState.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Shader.cpp  Shader.h  TestProgram.cpp  (+13 more)
src/graphics/: Mesh.cpp  Mesh.h
src/model/: Material.h  Vertex.cpp
src/programs/monkey/: AdditiveBlendPass.cpp  AdditiveBlendPass.h  BasePass.h  BloomFilterPass.cpp  BloomFilterPass.h  BrightFilterPass.cpp  BrightFilterPass.h  ColorBalancePass.cpp  ColorBalancePass.h  GaussianBlurPass.cpp  GaussianBlurPass.h  MainPass.cpp  MainPass.h  MonkeyProgram.cpp  MonkeyProgram.h  MonkeyRenderer.cpp  MonkeyRenderer.h  OutlinePass.cpp  OutlinePass.h  SunlightPass.cpp  SunlightPass.h  ToneMapPass.cpp  ToneMapPass.h
src/render/: AdditiveBlendPass.cpp  AdditiveBlendPass.h  BasePass.h  BrightFilterPass.cpp  BrightFilterPass.h  ColorBalancePass.cpp  ColorBalancePass.h  ColorTexture.cpp  ColorTexture.h  GaussianBlurPass.cpp  GaussianBlurPass.h  MainPass.cpp  MainPass.h  MonkeyProgram.cpp  MonkeyProgram.h  OutlinePass.cpp  OutlinePass.h  RenderContext.h  Renderer.cpp  Renderer.h  SunlightPass.cpp  SunlightPass.h  TextureRenderer.cpp  ToneMapPass.cpp  ToneMapPass.h
src/scene/: CameraState.h  DirectionalLight.h  SceneManager.cpp
studio/: app.py  binding_test.pyi  canvas_widget.py  fly_mode.py  hierarchy_panel.py  input_controller.py  key_controller.py  keymap.py  main.py  main_window.py  startup_options.py  tag_panel_controller.py  util.py
