# Target - Main
add_executable(dev-shell
        KeyCommandSet.cpp
        KeyCommandSet.h
        KeyCommand.h
        InputController.cpp
        InputController.h
        InputContext.h
        InputContext.cpp
        PlaybackState.h
        ContinuousRenderSession.h
        FlyCameraContext.cpp
        FlyCameraContext.h
        ObjectEditContext.cpp
        ObjectEditContext.h
        Gui.cpp
        Gui.h
        GuiContext.h
        guiCommon.h
        guiCommon.cpp
        Window.cpp
        Window.h
        main.cpp)
target_link_libraries(dev-shell
        PRIVATE
        renderer
        glfw
        )
