# Target - Main
add_executable(dev-shell
        input/KeyCommandSet.cpp
        input/KeyCommandSet.h
        input/KeyCommand.h
        input/InputController.cpp
        input/InputController.h
        input/InputContext.h
        input/InputContext.cpp
        PlaybackState.h
        ContinuousRenderSession.h
        input/FlyCameraContext.cpp
        input/FlyCameraContext.h
        input/ObjectEditContext.cpp
        input/ObjectEditContext.h
        gui/Gui.cpp
        gui/Gui.h
        gui/GuiContext.h
        gui/guiCommon.h
        gui/guiCommon.cpp
        Window.cpp
        Window.h
        main.cpp)
target_link_libraries(dev-shell
        PRIVATE
        engine
        glfw
        )
